# ComfyUI_UltimateSGUpscale

./: .gitignore  README.md  __init__.py  pyproject.toml  seam_mask_node.py
docs/plans/: 2026-02-25-differential-diffusion-seam-fix-design.md  2026-02-25-differential-diffusion-seam-fix.md
example_workflows/: tiled-upscale-builtin-nodes.json
tests/: test_seam_mask.py
